# PDFParser

./: LICENSE  README.md  extract_data1.py  pyproject.toml  requirements.txt
pdf_parser/: alignment.py  cleaning.py  pdf_processor.py  table_extractor.py  table_extractor_2.py  table_generator.py  utils.py
